--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<script type="text/javascript">app.initialize();</script>
 
 <script>
-//var obj={key:"VC",Id:"1171",mrp:"99",Name:"p2",url:"http://172.17.10.26/VC_Server/Default.aspx"};
+//var obj={key:"VC",Id:"1121",mrp:"99",Name:"p2",url:"http://172.17.10.26/VC_Server/Default.aspx"};
 var obj;
 var cart=[];
 var temprod;
@@ -96,7 +96,7 @@ var server_url;
 	<div data-role="footer" data-position="fixed" data-theme="b" id="footerTwo">
 		<div data-role="navbar" data-theme="b">
 			<ul>
-				<li><a href="#" id="finalSend" data-icon="arrow-r" onclick = "sendToBiller()">Check Out</a></li>
+				<li><a href="#" data-icon="arrow-r" onclick = "sendToBiller()" id = "encode">Check Out</a></li>
 				<li><a href="#pageone" data-icon="edit">Manage Cart</a></li>
 			</ul>
 		</div>
